--- a/css/modal.css
+++ b/css/modal.css
@@ -5,9 +5,9 @@ body {
   justify-content: center;
 }
 #content {
-  background: white;
-  padding: 24px;
-  width: 80%;
-  max-width: 600px;
-  max-height: 90%;
+    background: white;
+    width: 80%;
+    max-width: 600px;
+    max-height: 90%;
+    height: 100%;
 }
