--- a/css/modal.css
+++ b/css/modal.css
@@ -7,7 +7,7 @@ body {
 #content {
     background: white;
     width: 80%;
-    max-width: 600px;
+    max-width: 90%;
     max-height: 90%;
     height: 100%;
 }
